--- a/online-zoo/assets/styles/_pick&feed.scss
+++ b/online-zoo/assets/styles/_pick&feed.scss
@@ -179,7 +179,7 @@
 	}
 }
 
-@media (max-width: $desk) {
+@media (max-width: $small-desk) {
 	.pickNfeed {
 		padding-top: 10px;
 		padding-bottom: 60px;
