--- a/online-zoo/assets/styles/_section-1.scss
+++ b/online-zoo/assets/styles/_section-1.scss
@@ -1,13 +1,24 @@
 .section-1 {
 	height: 780px;
+
 	background-image: url("../../assets/images/sec-1/Giant Panda.png");
 	background-repeat: no-repeat;
 	background-size: cover;
+	&__container {
+		width: 1160px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 @media (max-width: $desk) {
 	.section-1 {
 		height: 584px;
+		&__container {
+			width: 940px;
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 }
 
